Show half.com title and image instead of goodreads/xisbn in listings

--- a/app/partials/seller_book_listings.html
+++ b/app/partials/seller_book_listings.html
@@ -21,8 +21,7 @@
         <!--TODO: line wrapping / overflow-->
         <div>
           <a href="{{listing.half_item_url}}" target="_blank">
-          <b>{{listing.edition.title}}</b></a>
-          {{!listing.edition.year ? '' : '(' + listing.edition.year + ')'}}
+          <b>{{listing.edition.half_title}}</b></a>
         </div>
         <div class="pull-right">{{listing.price | currency}}</div>
         <div>{{listing.edition.author}}</div>
