Add placeholder to goodreads user and isbn list fields

--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -3,19 +3,21 @@
 <h1>enter goodreads profile url</h1><br>
 
 <p>Copy and paste the URL of your goodreads.com profile to load your reading list.</p>
-<p>Example: <tt>http://www.goodreads.com/user/show/1234567-yourusername</tt></p>
 <p>Tip: Your goodreads.com account must be public (this is the default).</p>
 <br>
 
 <form class="form-inline" ng-submit="submitGoodreadsProfileUrl(goodreadsProfileUrl)">
-  <input type="text" class="span4" ng-model="goodreadsProfileUrl" autofocus>
+  <input type="text" class="span4" ng-model="goodreadsProfileUrl" autofocus
+      placeholder="http://www.goodreads.com/user/show/1234567-name">
   <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
 
 <br><br>
 <h1>or enter isbns</h1><br>
 <form ng-submit="submitIsbnList(isbnText)">
-  <textarea class="span6" rows="6" ng-model="isbnText" placeholder="TODO, 1111, 1234"></textarea>
+  <textarea class="span6" rows="6" ng-model="isbnText"
+    placeholder="0743273567, 9780140285604, 978-1451677614, 0143039946, 0316921173, 006091307X, 0142000663">
+  </textarea>
   <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
 </form>
 
