--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -15,6 +15,7 @@
 <br><br>
 <h1>or enter isbns</h1><br>
 <form ng-submit="submitIsbnList(isbnText)">
+  <!--TODO: pick placeholders with fewer editions/listings-->
   <textarea class="span6" rows="6" ng-model="isbnText"
     placeholder="0743273567, 9780140285604, 978-1451677614, 0143039946, 0316921173, 006091307X, 0142000663">
   </textarea>
