--- a/app/partials/editions.html
+++ b/app/partials/editions.html
@@ -1,4 +1,4 @@
-<div class="span6 offset1">
+<div class="inner-content">
 
 <h1>select editions</h1><br>
 
@@ -48,3 +48,6 @@
     </form>
 
   </div>
+</div>
+
+</div>
