--- a/app/partials/listings.html
+++ b/app/partials/listings.html
@@ -1,4 +1,4 @@
-<div class="span4 offset2">
+<div class="inner-content" style="max-width: 370px">
 
 <h3><center>querying half.com...</center></h3><br>
 
@@ -12,7 +12,7 @@
 
 </div>
 
-<div class="row span6 offset1" style="text-align: center; padding-top: 40px">
+<div class="row inner-content" style="max-width: 570px; text-align: center; padding-top: 40px">
 
 <div giphy-embed></div>
 
