--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -1,4 +1,4 @@
-<div class="span6 offset1">
+<div class="inner-content">
 
 <h1>enter goodreads profile url</h1><br>
 
@@ -7,7 +7,7 @@
 <br>
 
 <form class="form-inline" ng-submit="submitGoodreadsProfileUrl(goodreadsProfileUrl)">
-  <input type="text" class="span4" ng-model="goodreadsProfileUrl" autofocus
+  <input type="text" style="width: 60%" ng-model="goodreadsProfileUrl" autofocus
       placeholder="http://www.goodreads.com/user/show/1234567-name">
   <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
@@ -16,7 +16,7 @@
 <h1>or enter isbns</h1><br>
 <form ng-submit="submitIsbnList(isbnText)">
   <!--TODO: pick placeholders with fewer editions/listings-->
-  <textarea class="span6" rows="6" ng-model="isbnText"
+  <textarea rows="6" style="width: 98%" ng-model="isbnText"
     placeholder="0743273567, 9780140285604, 978-1451677614, 0143039946, 0316921173, 006091307X, 0142000663">
   </textarea>
   <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
