Tweak user partial copy

--- a/app/partials/user.html
+++ b/app/partials/user.html
@@ -2,7 +2,7 @@
 
 <h1>enter goodreads profile url</h1><br>
 
-<p>Copy and paste the URL of your goodreads.com profile to load your reading list.</p>
+<p>Copy and paste the user ID or URL of your goodreads.com profile to load your reading list.</p>
 <p>Tip: Your goodreads.com account must be public (this is the default).</p>
 <br>
 
