Replace show/hide advanced link with button WIP

--- a/app/partials/shelves.html
+++ b/app/partials/shelves.html
@@ -8,29 +8,33 @@
 </div>
 <div ng-hide="loading">
   <form ng-submit="submitGoodreadsShelves(selectedShelves)">
-    <select multiple autofocus class="shelves-select" size="20"
-      ng-model="selectedShelves"
-      ng-options="shelf.name for shelf in shelves">
-    </select><br><br>
-    <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
-  </form>
-
-  <a href="" ng-click="showAdvanced = !showAdvanced" style="padding-left: 20px">
-    {{showAdvanced ? 'hide' : 'show'}} advanced options
-  </a>
-  <div ng-if="showAdvanced" class="well well-small book-defaults">
-    book search options
-    <div>
-      <div>defaults</div>
-      <div ubs-book-options="defaultBookOptions"></div>
+    <div ng-if="!showAdvanced">
+      <select multiple autofocus class="shelves-select" size="20"
+        ng-model="selectedShelves"
+        ng-options="shelf.name for shelf in shelves">
+      </select><br><br>
+      <a href="" class="btn btn-success" ng-click="submitShowAdvanced()">
+        advanced options &gt;&gt;
+      </a>
     </div>
-    <div ng-repeat="shelf in selectedShelves">
-      <div>shelf:<br>{{shelf.name}}</div>
-      <div ubs-book-options="shelf.bookOptions"
-        ubs-book-options-defaults="defaultBookOptions">
+
+    <div ng-if="showAdvanced" class="well well-small book-defaults">
+      book search options
+      <div>
+        <div>defaults</div>
+        <div ubs-book-options="defaultBookOptions"></div>
+      </div>
+      <div ng-repeat="shelf in selectedShelves">
+        <div>shelf:<br>{{shelf.name}}</div>
+        <div ubs-book-options="shelf.bookOptions"
+          ubs-book-options-defaults="defaultBookOptions">
+        </div>
       </div>
     </div>
-  </div>
+
+
+    <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
+  </form>
 
 </div>
 
