Improve styling of defaul/shelf options

--- a/app/partials/books.html
+++ b/app/partials/books.html
@@ -17,6 +17,9 @@
         select
         <a href="" ng-click="setAllSelections(true)">all</a> /
         <a href="" ng-click="setAllSelections(false)">none</a>
+        <a href="" ng-click="showAdvanced = !showAdvanced" style="padding-left: 20px">
+          {{showAdvanced ? 'hide' : 'show'}} advanced options
+        </a>
         <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
       </div><br>
 
