--- a/app/css/app.css
+++ b/app/css/app.css
@@ -29,6 +29,12 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.inner-content.wide {
+  max-width: 700px;
+}
+.inner-content.wide h1 {
+  padding-left: 50px;
+}
 
 /*
 .menu {
@@ -74,6 +80,10 @@ body {
   color: #aaa;
 }
 
+.shelves-column {
+  display: inline-block;
+  vertical-align: top;
+}
 .books-checkbox {
   display: inline-block;
   vertical-align: top;
@@ -106,32 +116,25 @@ img.seller-books-img {
   width: 400px;
 }
 
+.show-advanced {
+  text-align: right;
+}
 .book-defaults {
-  max-width: 540px;
-  margin-left: auto;
+  font-size: 18px;
+  margin-left: 12px;
 }
 .book-defaults > div {
-  text-align: right;
   font-size: 12px;
+  margin-top: 8px;
 }
-.book-defaults > div > div {
-  display: inline-block;
-  text-align: left;
+.book-defaults > div:first-child {
+  padding-bottom: 8px;
 }
-.book-defaults > div > div:first-child {
-  width: 90px;
-  overflow-x: hidden;
-  vertical-align: top;
-  padding-top: 11px;
-  padding-right: 4px;
-}
-
 
 .book-options-form {
   position: relative;
   font-size: 12px;
   min-width: 440px;
-  margin-top: 8px;
   border: 1px solid #e3e3e3;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
