--- a/app/partials/giphy_embed.html
+++ b/app/partials/giphy_embed.html
@@ -1,1 +1,1 @@
-<iframe src="{{safeGiphyUrl}}" width="500" height="400" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe ng-src="{{safeGiphyUrl}}" width="500" height="400" frameBorder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
