--- a/app/partials/body.html
+++ b/app/partials/body.html
@@ -4,9 +4,8 @@
         <a class="brand" href="#">usedbookscraper</a>
 
         <ul class="nav pull-left">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#user">Begin</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#start">start search</a></li>
         </ul>
 
         <div class="nav pull-right" ubs-progress-tracker>
