Add about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,1 +1,35 @@
-ABOUT
+<div class="inner-content">
+
+  <h1>about</h1><br>
+
+  <img class="about-image pull-right" width="250"
+    src="http://octopart.com/static/nextstatic/team/russell.JPG">
+
+  <p class="about-text">
+    <b>usedbookscraper</b> was born for two reasons:
+    <ol>
+      <li>a long list of books I wanted to read</li>
+      <li>the condition of broke-ness that tends to accompany encounters with institutions of higher education</li>
+    </ol>
+  </p>
+
+  <p class="about-text">
+    (a contributing factor was the deliciousness of used books in general
+    &mdash; the smells,
+    the marginalia from bookworms and distressed students,
+    the business cards and horse track picks and plane tickets as bookmarks,
+    <em style="white-space: nowrap">et cetera</em>)
+  </p>
+
+  <p class="about-text" style="text-align: center; margin-top: 80px">
+    like <b>usedbookscraper</b>? say hi on
+    <a href="https://www.goodreads.com/user/show/5123156-russ" target="_blank">goodreads</a>
+    or
+    <a href="https://twitter.com/qqrsmith" target="_blank">twitter</a>
+  </p>
+
+  <p class="about-text" style="text-align: center; margin-top: 20px">
+    or send comments and bug reports to <b>usedbookscraper</b> at <b>gmail</b>
+  </p>
+
+</div>
