--- a/app/css/app.css
+++ b/app/css/app.css
@@ -36,6 +36,18 @@ body {
   padding-left: 50px;
 }
 
+.about-text {
+  line-height: 18px;
+  text-align: justify;
+}
+.about-image {
+  border: 2px #111 solid;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  margin-left: 24px;
+  margin-bottom: 40px;
+}
 /*
 .menu {
   list-style: none;
