--- a/app/css/app.css
+++ b/app/css/app.css
@@ -208,6 +208,18 @@ input[type=number].book-options-input::-webkit-outer-spin-button {
   font-size: 12px;
 }
 
+.listings-wait-note {
+  max-width: 400px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: justify;
+  padding-top: 20px;
+  line-height: 18px
+}
+.listings-wait-note a {
+  color: #6ac;
+}
+
 .seller-label {
   font-size: 24px;
   line-height: 30px;
