--- a/app/partials/body.html
+++ b/app/partials/body.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <div class="container well well-large main-content">
+  <div class="container main-content">
 
       <div class="row span7" ubs-error-alerts></div>
 
