--- a/app/partials/body.html
+++ b/app/partials/body.html
@@ -15,10 +15,10 @@
     </div>
   </div>
 
-  <div class="container main-content">
+  <div class="main-content" ubs-main-content-hide-home-padding>
 
-      <div class="row span7" ubs-error-alerts></div>
+      <div ubs-error-alerts></div>
 
-      <div class="row" ng-view></div>
+      <div ng-view></div>
 
   </div>
