--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,1 +1,39 @@
-HOME
+<div class="clearfix"></div>
+<div class="home-text top-slide">
+  HOME<br>
+  HOME<br>
+  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+</div>
+<div class="home-text mid-slide" style="background-color: #aaa">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+</div>
+<div class="home-text mid-slide">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+</div>
+<div class="home-text bot-slide">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
+  HOME<br>
+  HOME<br>
+  HOME<br>
+  HOME<br>
+</div>
