Fix continue button on books and editions steps

--- a/app/partials/books.html
+++ b/app/partials/books.html
@@ -43,7 +43,9 @@
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
+      <div style="text-align: right">
+        <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
+      </div>
     </form>
   </div>
 
