--- a/app/partials/editions.html
+++ b/app/partials/editions.html
@@ -44,7 +44,9 @@
           </small></div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
+      <div style="text-align: right">
+        <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
+      </div>
     </form>
 
   </div>
