--- a/app/partials/listings.html
+++ b/app/partials/listings.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<div class="row inner-content" style="max-width: 570px; text-align: center; padding-top: 40px">
+<div class="inner-content" style="max-width: 570px; text-align: center; padding-top: 40px">
 
 <div giphy-embed></div>
 
@@ -21,7 +21,7 @@
 &mdash; they're unfortunately not set up to
 <a href="http://en.wikipedia.org/wiki/Cross-origin_resource_sharing" target="_blank">accept requests directly</a>
 so everything has to go through my underpowered free web host &mdash; if you're
-seeing errors or timeouts <a href="#about">drop me a message</a> and try again later)
+seeing errors or timeouts <a href="#about" target="_blank">drop me a message</a> and try again later)
 </p>
 
 </div>
