--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -32,4 +32,17 @@
     or send comments and bug reports to <b>usedbookscraper</b> at <b>gmail</b>
   </p>
 
+  <p class="about-text" style="font-size: 11px; text-align: center; margin-top: 80px">
+  many thanks:
+    <a href="https://angularjs.org/" target="_blank">angular</a> &bull;
+    <a href="http://getbootstrap.com/2.3.2/" target="_blank">bootstrap</a> &bull;
+    <a href="http://lodash.com/" target="_blank">lo-dash</a> &bull;
+    <a href="http://gulpjs.com/" target="_blank">gulp</a> &bull;
+    <a href="https://www.heroku.com/" target="_blank">heroku</a> &bull;
+    <a href="http://www.sinatrarb.com/" target="_blank">sinatra</a> &bull;
+    <a href="http://developer.ebay.com/DevZone/half-finding/Concepts/HalfFindingAPIGuide.html" target="_blank">half.com api</a> &bull;
+    <a href="https://www.goodreads.com/api" target="_blank">goodreads api</a> &bull;
+    <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a>
+  </p>
+
 </div>
