Eliminate hotlink to headshot img

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -2,8 +2,7 @@
 
   <h1>about</h1><br>
 
-  <img class="about-image pull-right" width="250"
-    src="http://octopart.com/static/nextstatic/team/russell.JPG">
+  <img class="about-image pull-right" width="250" src="/static/headshot.jpg">
 
   <p class="about-text">
     <b>usedbookscraper</b> was born for two reasons:
