Add home page content

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,32 +1,39 @@
 <div class="clearfix"></div>
+
 <div class="home-text top-slide">
-  HOME<br>
-  HOME<br>
-  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
-  HOME<br>
-  HOME<br>
-  HOME<br>
+  <!--<img src="https://farm4.staticflickr.com/3524/4552277923_f921822e69_n.jpg">-->
+  <img src="/static/bookstack.jpg" style="float: right; margin-top: 50px">
+  <div>
+    <h1>usedbookscraper</h1>
+    <h4>buy a stack of books for a couple bucks each</h4>
+    <div style="margin-top: 50px; margin-left: 100px">
+      <a href="#start" class="btn btn-large btn-primary">start search &gt;&gt;</a>
+    </div>
+    <div style="margin-top: 20px; margin-left: 100px">
+      or <a href="#">see an example search...</a>
+    </div>
+  </div>
+
+  <div class="clearfix"></div>
 </div>
-<div class="home-text mid-slide" style="background-color: #aaa">
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
-  HOME<br>
-  HOME<br>
-  HOME<br>
+
+<div class="home-text mid-slide" style="background-color: lightblue">
+  <div ng-include="'partials/half-shipping-table.html'"
+    style="float: right; margin-left: 50px">
+  </div>
+  <div>
+    <b>how it works:</b>
+    <ol>
+      <li>get your <b>reading list</b> from goodreads.com or enter isbns directly</li>
+      <li>select <b>5 &ndash; 25 books</b> for the search</li>
+      <li>if you want, prioritize certain books, pick specific editions, and set max price and minimum acceptable book condition</li>
+      <li>usedbookscraper <b>searches half.com</b> and shows you results grouped by seller</li>
+      <li><b>buy a stack of books</b> from <b>one seller</b> and get cheap shipping</li>
+    </ol>
+  </div>
+  <div class="clearfix"></div>
 </div>
-<div class="home-text mid-slide">
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
-  HOME<br>
-  HOME<br>
-  HOME<br>
-</div>
+
 <div class="home-text bot-slide">
   HOME<br>
   HOME<br>
