--- a/app/css/app.css
+++ b/app/css/app.css
@@ -52,16 +52,37 @@ body {
 }
 .home-text.top-slide {
   border-radius: 6px 6px 0 0;
-  /*background-color: lightgreen;*/
+}
+.home-text.top-slide img {
+  border: 2px #333 solid;
+  border-radius: 4px;
 }
 .home-text.mid-slide {
-  background-color: lightblue;
 }
 .home-text.bot-slide {
-  /*background-color: orange;*/
   border-radius: 0 0 6px 6px;
 }
-
+.half-shipping {
+  display: inline-block;
+  width: auto;
+  font-size: 11px;
+  border-color: #666;
+}
+.half-shipping th, .half-shipping td {
+  border-color: #666;
+  line-height: 14px;
+}
+.half-shipping .price {
+  text-align: center;
+}
+.half-shipping .additional {
+  color: #666;
+}
+.half-shipping .highlight {
+  padding-left: 2px;
+  padding-right: 2px;
+  background-color: #ff8;
+}
 
 .about-text {
   line-height: 18px;
@@ -69,8 +90,6 @@ body {
 }
 .about-image {
   border: 2px #111 solid;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
   border-radius: 4px;
   margin-left: 24px;
   margin-bottom: 40px;
