Tweak color of home page alt stripes

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,6 +1,6 @@
 <div class="clearfix"></div>
 
-<div class="home-text top-slide">
+<div class="home-text top-slide lightbg">
   <!--<img src="https://farm4.staticflickr.com/3524/4552277923_f921822e69_n.jpg">-->
   <img src="/static/bookstack.jpg" style="float: right; margin-top: 50px">
   <div>
@@ -17,7 +17,7 @@
   <div class="clearfix"></div>
 </div>
 
-<div class="home-text mid-slide" style="background-color: lightblue">
+<div class="home-text mid-slide darkbg">
   <div ng-include="'partials/half-shipping-table.html'"
     style="float: right; margin-left: 50px">
   </div>
@@ -34,7 +34,7 @@
   <div class="clearfix"></div>
 </div>
 
-<div class="home-text bot-slide">
+<div class="home-text bot-slide lightbg">
   HOME<br>
   HOME<br>
   HOME<br>
