--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28,6 +28,7 @@ body {
   border-radius: 6px;
 }
 .main-content.no-pad {
+  background-color: transparent;
   border-width: 0px;
   max-width: 850px;
   padding: 0;
@@ -50,6 +51,14 @@ body {
   width: auto;
   padding: 48px;
 }
+.home-text.lightbg {
+  background-color: rgba(245,245,245, 0.95);
+}
+.home-text.darkbg {
+  /*background-color: rgba(197,197,197, 0.95);*/
+  background-color: rgba(218,218,218, 0.95);
+}
+
 .home-text.top-slide {
   border-radius: 6px 6px 0 0;
 }
@@ -67,6 +76,7 @@ body {
   width: auto;
   font-size: 11px;
   border-color: #666;
+  background-color: #f5f5f5;
 }
 .half-shipping th, .half-shipping td {
   border-color: #666;
