Modify home content

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -26,7 +26,7 @@
     <ol>
       <li>get your <b>reading list</b> from goodreads.com or enter isbns directly</li>
       <li>select <b>5 &ndash; 25 books</b> for the search</li>
-      <li>if you want, prioritize certain books, pick specific editions, and set max price and minimum acceptable book condition</li>
+      <li>tweak options to prioritize certain books, pick specific editions, and set max price and minimum acceptable book condition</li>
       <li>usedbookscraper <b>searches half.com</b> and shows you results grouped by seller</li>
       <li><b>buy a stack of books</b> from <b>one seller</b> and get cheap shipping</li>
     </ol>
@@ -35,12 +35,5 @@
 </div>
 
 <div class="home-text bot-slide lightbg">
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  <img width="400" src="http://upload.wikimedia.org/wikipedia/commons/c/cd/Brooklyn_Bridge_20080501.JPG">
-  HOME<br>
-  HOME<br>
-  HOME<br>
-  HOME<br>
+  The quick brown fox jumped over the lazy dog.
 </div>
