Show usedbookscraper goodreads account instead of personal account

--- a/app/bookscrapersession/partials/user.html
+++ b/app/bookscrapersession/partials/user.html
@@ -2,12 +2,12 @@
 
 <h1>enter goodreads profile url</h1><br>
 
-<p>Copy and paste the user ID or URL of your goodreads.com profile to load your reading list.</p>
+<p>Copy and paste the URL of your goodreads.com profile to load your reading list.</p>
 <p>Tip: Your goodreads.com account must be public (this is the default).</p>
 <br>
 
 <form class="form-inline" ng-submit="submitGoodreadsProfileUrl(goodreadsProfileUrl)">
-  <input type="text" style="width: 60%" ng-model="goodreadsProfileUrl" autofocus
+  <input type="text" style="width: 80%" ng-model="goodreadsProfileUrl" autofocus
       placeholder="http://www.goodreads.com/user/show/1234567-name">
   <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
