--- a/app/bookscrapersession/partials/user.html
+++ b/app/bookscrapersession/partials/user.html
@@ -8,7 +8,7 @@
 
 <form class="form-inline" ng-submit="submitGoodreadsProfileUrl(goodreadsProfileUrl)">
   <input type="text" style="width: 80%" ng-model="goodreadsProfileUrl" autofocus
-      placeholder="http://www.goodreads.com/user/show/1234567-name">
+      placeholder="http://www.goodreads.com/user/show/12345678-name">
   <button type="submit" class="btn btn-primary">continue &gt;&gt;</button>
 </form>
 
@@ -17,7 +17,7 @@
 <form ng-submit="submitIsbnList(isbnText)">
   <!--TODO: pick placeholders with fewer editions/listings-->
   <textarea rows="6" style="width: 98%" ng-model="isbnText"
-    placeholder="0743273567, 9780140285604, 978-1451677614, 0143039946, 0316921173, 006091307X, 0142000663">
+    placeholder="0140285601, 978-0465026562, 9780374528379">
   </textarea>
   <button type="submit" class="btn btn-primary pull-right">continue &gt;&gt;</button>
 </form>
