Modify padding directive to add margin for tall screen sizes

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -33,11 +33,16 @@ body {
   max-width: 850px;
   padding: 0;
 }
-@media all and (min-height: 800px) {
+.main-content.topmargin {
+  margin-top: 100px
+}
+/*
+@media all and (min-height: 1000px) {
   .main-content {
-    margin-top: 100px
+    margin-top: 80px
   }
 }
+*/
 
 .inner-content {
   max-width: 600px;
