--- a/app/partials/body.html
+++ b/app/partials/body.html
@@ -5,6 +5,7 @@
 
         <ul class="nav pull-left">
           <li><a href="#about">about</a></li>
+          <li><a href="#example">example</a></li>
           <li><a href="#start">start search</a></li>
         </ul>
 
