Delete third section from home content

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -16,7 +16,7 @@
   <div class="clearfix"></div>
 </div>
 
-<div class="home-text mid-slide darkbg">
+<div class="home-text bot-slide darkbg">
   <div ng-include="'partials/half-shipping-table.html'"
     style="float: right; margin-left: 50px">
   </div>
@@ -31,8 +31,4 @@
     </ol>
   </div>
   <div class="clearfix"></div>
-</div>
-
-<div class="home-text bot-slide lightbg">
-  The quick brown fox jumped over the lazy dog.
 </div>
